--- a/Resources/views/Utilisateur/add.html.twig
+++ b/Resources/views/Utilisateur/add.html.twig
@@ -1,4 +1,4 @@
-{% extends "::layout.html.twig" %}
+{% extends "PlanningBundle:Utilisateur:layout.html.twig" %}
 
 {% block title %}PlanningBundle:Utilisateur:add{% endblock %}
 
